-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2
-
-
037dcb2c2 (dev), 4fbd6bcd4 (6.6), 39387b388 (tqtc/lts-6.5), 2f830a63f (dev), 8526bb5a3 (6.7), 693338387 (6.6), 8beb57d00 (tqtc/lts-6.5)
Although there is meta data type for thumbnail, thumbnail is not easy to use. There are 2 issues right now:
1. It is said that thumbnail haven't been implemented with the FFMPEG backend yet. So it means that thumbnail is totally not usable for Qt6.
2. "windows" backend does not work well either. The thumbnail source 'PKEY_ThumbnailStream' seems to be not compatible with any random video. It is for 'VT_STREAM' format - not so sure what that is.
The current situation is that requesting thumbnail returns invalid QVariant in most scenarios (at least all videos I've tested). For example:
QMediaMetaData metaData = m_player->metaData(); //m_player is a QMediaPlayer
QImage thumbNail = metaData.value(QMediaMetaData::ThumbnailImage).value<QImage>();
metaData.value(QMediaMetaData::ThumbnailImage) turns out to be a QVariant(Invalid) for some random videos I tested, so we get nothing for thumbNail. Not sure how should thumbnail be implemented.
In the future, I suppose a realization by FFMPEG should be the way to go since it is cross-platform.
- is duplicated by
-
QTBUG-119361 Multimedia FFMPEG backend emits an error when trying to play a music file with embedded cover image
-
- Closed
-
-
QTBUG-113470 QMediaMetaData CoverArtImage from AVStream (FFMPEG)
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-116324 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
521126,8 | Add support for thumbnail metadata in QMediaPlayer with FFmpeg backend | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
522709,2 | Add support for thumbnail metadata in QMediaPlayer with FFmpeg backend | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
522773,2 | Add support for thumbnail metadata in QMediaPlayer with FFmpeg backend | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
542851,3 | Clarify documentation for QMediaMetaData::Key::ThumbnailImage | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
543138,2 | Clarify documentation for QMediaMetaData::Key::ThumbnailImage | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
545197,2 | Clarify documentation for QMediaMetaData::Key::ThumbnailImage | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
545234,2 | Clarify documentation for QMediaMetaData::Key::ThumbnailImage | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |