src/plugins/multimedia/ffmpeg/playbackengine/qffmpegmediadataholder.cpp
@@ -247,6 +247,9 @@ MediaDataHolder::MediaDataHolder(AVFormatContextUPtr context,
         if (trackType == QPlatformMediaPlayer::NTrackTypes)
             continue;
 
+        if (stream->disposition & AV_DISPOSITION_ATTACHED_PIC)
+            continue; // Ignore attached picture streams because we treat them as metadata
+
         auto metaData = QFFmpegMetaData::fromAVMetaData(stream->metadata);
         const bool isDefault = stream->disposition & AV_DISPOSITION_DEFAULT;
 
@@ -286,6 +289,41 @@ MediaDataHolder::MediaDataHolder(AVFormatContextUPtr context,
     updateMetaData();
 }
 
+namespace {
+
+/*!
+    \internal
+
+    Attempt to find an attached picture from the context's streams.
+    This will find ID3v2 pictures on audio files, and also pictures
+    attached to videos.
+ */
+QImage getAttachedPicture(const AVFormatContext *context)
+{
+    if (!context)
+        return {};
+
+    for (unsigned int i = 0; i < context->nb_streams; ++i) {
+        const AVStream* stream = context->streams[i];
+        if (!stream || !(stream->disposition & AV_DISPOSITION_ATTACHED_PIC))
+            continue;
+
+        const AVPacket *compressedImage = &stream->attached_pic;
+        if (!compressedImage || !compressedImage->data || compressedImage->size <= 0)
+            continue;
+
+        // Feed raw compressed data to QImage::fromData, which will decompress it
+        // if it is a recognized format.
+        QImage image = QImage::fromData({ compressedImage->data, compressedImage->size });
+        if (!image.isNull())
+            return image;
+    }
+
+    return {};
+}
+
+}
+
 void MediaDataHolder::updateMetaData()
 {
     m_metaData = {};
@@ -298,6 +336,12 @@ void MediaDataHolder::updateMetaData()
                       QVariant::fromValue(QFFmpegMediaFormatInfo::fileFormatForAVInputFormat(
                               m_context->iformat)));
     m_metaData.insert(QMediaMetaData::Duration, m_duration / qint64(1000));
+
+    if (!m_cachedThumbnail.has_value())
+        m_cachedThumbnail = getAttachedPicture(m_context.get());
+
+    if (!m_cachedThumbnail->isNull())
+        m_metaData.insert(QMediaMetaData::ThumbnailImage, m_cachedThumbnail.value());
 
     for (auto trackType :
          { QPlatformMediaPlayer::AudioStream, QPlatformMediaPlayer::VideoStream }) {
